# thrift-compiler

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  ThriftUrls.cmake  configure_thrift.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
tests/: test_compile.py  test_version.py
