[build-system]
requires = [
    "setuptools>=67",
    "setuptools_scm[toml]>=6.2",
    "scikit-build>=0.13",
    "cmake>=3.25",
]
build-backend = "setuptools.build_meta"

[project]
name = "thrift-compiler"
description = "Thrift binary to compile .thrift files"
authors = [
    {name = "Adrian Stachlewski", email = "starhel.github@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["thrift", "compiler", "build"]
classifiers = [
    "Development Status :: 3 - Alpha ",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]
dynamic = ["version"]
