[build-system]
requires = [
    "scikit_build_core[rich]",
]
build-backend = "scikit_build_core.build"

[project]
name = "thrift-compiler"
description = "Thrift binary to compile .thrift files"
version = "0.13.0"
authors = [
    {name = "Adrian Stachlewski", email = "starhel.github@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["thrift", "compiler", "build"]
classifiers = [
    "Development Status :: 3 - Alpha ",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]

[tool.scikit-build]
minimum-version = "0.2"
cmake.minimum-version = "3.25"
wheel.py-api = "py3"